--- a/styles/components/_examples.scss
+++ b/styles/components/_examples.scss
@@ -29,6 +29,10 @@
 
         &:last-child { margin-bottom: 0; }
 
+        div {
+            width: 100%; 
+        }
+
         h4 {
             margin-bottom: 0;
             margin-right: 0;
